[package]

name = "rustmvc"
version = "0.0.1"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "Josef Pospíšil <josef.pospisil@laststar.eu>"]

[dependencies.nickel]

git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies.postgres]

git = "https://github.com/sfackler/rust-postgres.git"
